--- a/index.html
+++ b/index.html
@@ -357,9 +357,9 @@
             <li><strong>Blindness</strong> by José Saramago</li>
             <li><strong>The Sound and the Fury</strong> by William Faulkner</li>
             <li><strong>As I Lay Dying</strong> by William Faulkner</li>
-            <li><strong>A Madman for a Hundred Liras</strong> by Aziz Nesin</li
-            <li><strong>Germinal</strong> by Émile Zola</li 
-            <li><strong>Animal Farm</strong> by George Orwell</li                                     
+            <li><strong>A Madman for a Hundred Liras</strong> by Aziz Nesin</li>
+            <li><strong>Germinal</strong> by Émile Zola</li>
+            <li><strong>Animal Farm</strong> by George Orwell</li>         
             <li><strong>The Blind Owl</strong> by Sadegh Hedayat</li>
             <li><strong>Three Drops of Blood</strong> by Sadegh Hedayat</li>
             <li><strong>The Little Prince</strong> by Antoine de Saint-Exupéryt</li>
@@ -387,6 +387,7 @@
   </script>
 </body>
 </html>
+
 
 
 
