--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <div></div>
     <main class="main">
       <section id="about" class="intro">
-        <h1>Theory in Service of Practice</h1>
+        <h2>About Me</h2>
         <p class="muted">I work on <strong>Machine learning</strong>, <strong>Natural language processing</strong>, <strong>Data science</strong>,  and <strong>Information Theory</strong>. I care about models that not only get the job done, but also are theoretically proven to be optimal</p>
         <div class="meta" style="margin-top:8px">
           <span><a href="https://drive.google.com/file/d/1uOUNj2PBIcHeJd35O1pCTRXo033M0xyq/view?usp=sharing">Résumé</a></span>
@@ -387,6 +387,7 @@
   </script>
 </body>
 </html>
+
 
 
 
