--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <article class="project">
               <h3>
                 <a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC7694136/" target="_blank" rel="noreferrer noopener">
-                  Amino Acid k-mer Feature Extraction for Quantitative Antimicrobial Resistance (AMR) Prediction
+                  Amino Acid k-mer Features for Antimicrobial Resistance Prediction
                 </a>
               </h3>
             <p class="muted">Microbes can adapt over time, developing resistance to antibiotics—a phenomenon known as antimicrobial resistance (AMR). Once this resistance emerges, treating infections becomes much more difficult, often requiring stronger or alternative antibiotics, many of which may carry greater risks. Misuse and overuse of antibiotics have accelerated this process, putting constant evolutionary pressure on microbes and driving the rise of AMR. Today, this issue is widely regarded as one of the most serious public-health threats, with the potential to trigger crises comparable to pandemics if effective treatments are unavailable.</p>
@@ -387,6 +387,7 @@
   </script>
 </body>
 </html>
+
 
 
 
