--- a/index.html
+++ b/index.html
@@ -98,8 +98,7 @@
     <main class="main">
       <section id="about" class="intro">
         <h2>About Me</h2>
-        <p class="muted">I work on <strong>Machine learning</strong>, <strong>Natural language processing</strong>, <strong>Data science</strong>,  and <strong>Information Theory</strong>.<br>
-          I care about models that not only get the job done, but also are theoretically proven to be optimal.<br>
+        <p class="muted">I work on <strong>Machine learning</strong>, <strong>Natural language processing</strong>, <strong>Data science</strong>,  and <strong>Information Theory</strong>. I care about models that not only get the job done, but also are theoretically proven to be optimal.<br>
           Personally, I am interested in learning about psychology, social sciences, and history.</p>
         <div class="meta" style="margin-top:8px">
           <span><a href="https://drive.google.com/file/d/1uOUNj2PBIcHeJd35O1pCTRXo033M0xyq/view?usp=sharing">Résumé</a></span>
@@ -389,6 +388,7 @@
   </script>
 </body>
 </html>
+
 
 
 
