--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <a href="#Publications">Publications</a>
         <a href="#books">Book Recommendations</a>
         <a href="#contact">Contact</a>
-        <a href="https://drive.google.com/file/d/1uOUNj2PBIcHeJd35O1pCTRXo033M0xyq/view?usp=sharing">Résumé</a>
+        <a href="https://raw.githubusercontent.com/TahaAslani/TahaAslani/main/Resume_TV.pdf">Résumé</a>
       </nav>
     </aside>
     <div></div>
@@ -101,7 +101,7 @@
         <p class="muted">I work on <strong>Machine learning</strong>, <strong>Natural language processing</strong>, <strong>Data science</strong>,  and <strong>Information Theory</strong>. I care about models that not only get the job done, but also are theoretically proven to be optimal.<br>
           Personally, I am interested in learning about psychology, social sciences, and history.</p>
         <div class="meta" style="margin-top:8px">
-          <span><a href="https://drive.google.com/file/d/1uOUNj2PBIcHeJd35O1pCTRXo033M0xyq/view?usp=sharing">Résumé</a></span>
+          <span><a href="https://raw.githubusercontent.com/TahaAslani/TahaAslani/main/Resume_TV.pdf">Résumé</a></span>
           <span>•</span>
           <span><a href="mailto:taha.valizadeh@gmail.com">Email</a></span>
           <span>•</span>
@@ -388,6 +388,7 @@
   </script>
 </body>
 </html>
+
 
 
 
