--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
     <main class="main">
       <section id="about" class="intro">
         <h2>About Me</h2>
+        <img src="images/Taha.png" alt="Taha ValizadehAslani" class="profile-pic">
         <p class="muted">I work on <strong>Machine learning</strong>, <strong>Natural language processing</strong>, <strong>Data science</strong>,  and <strong>Information Theory</strong>. I care about models that not only get the job done, but also are theoretically proven to be optimal.<br>
           Personally, I am interested in learning about psychology, social sciences, and history.</p>
         <div class="meta" style="margin-top:8px">
@@ -388,26 +389,3 @@
   </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
