--- a/index.html
+++ b/index.html
@@ -64,6 +64,14 @@
     height: auto;
     margin: 12px auto;
     }
+    .profile-pic-top {
+      max-width: 33%;    /* photo width = ~1/3 of text width */
+      height: auto;
+      border-radius: 50%;  /* makes it circular */
+      margin: 0 auto 24px;
+      display: block;
+    }
+
     .contact dd, .contact dt { margin: 0; }
     .contact dt { color: var(--ink-2); font-size: 12px; text-transform: uppercase; letter-spacing: .08em; margin-top: 18px; }
     footer { border-top: 1px solid var(--rule); margin-top: 64px; padding-top: 16px; color: var(--ink-2); font-size: 14px; }
@@ -389,3 +397,4 @@
   </script>
 </body>
 </html>
+
