--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     height: auto;
     margin: 12px auto;
     }
-    .profile-pic-top {
+    .profile-pic {
       max-width: 33%;    /* photo width = ~1/3 of text width */
       height: auto;
       border-radius: 50%;  /* makes it circular */
@@ -397,4 +397,5 @@
   </script>
 </body>
 </html>
+
 
