--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       height: auto;
       border-radius: 50%;    /* keep it circular */
       margin: 0 24px 24px 0; /* spacing to the right and bottom */
-      float: left;           /* aligns to left and lets text wrap */
+/*       float: left;           /* aligns to left and lets text wrap */ */
     }
     @media (max-width: 1100px) {
       .wrap { grid-template-columns: 1fr; }
@@ -395,6 +395,7 @@
   </script>
 </body>
 </html>
+
 
 
 
