--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       height: auto;
       border-radius: 50%;    /* keep it circular */
       margin: 0 24px 24px 0; /* spacing to the right and bottom */
-/*       float: left;           /* aligns to left and lets text wrap */ */
+      float: left;           /* aligns to left and lets text wrap */
     }
     @media (max-width: 1100px) {
       .wrap { grid-template-columns: 1fr; }
@@ -104,7 +104,7 @@
     <main class="main">
       <section id="about" class="intro">
         <h2>About Me</h2>
-        <img src="images/Taha.png" alt="Taha ValizadehAslani" class="profile-pic-top">
+<!--         <img src="images/Taha.png" alt="Taha ValizadehAslani" class="profile-pic-top"> -->
         <p class="muted">I work on <strong>Machine learning</strong>, <strong>Natural language processing</strong>, <strong>Data science</strong>,  and <strong>Information Theory</strong>. I care about models that not only get the job done, but also are theoretically proven to be optimal.<br>
           Personally, I am interested in learning about psychology, social sciences, and history.</p>
         <div class="meta" style="margin-top:8px">
@@ -395,6 +395,7 @@
   </script>
 </body>
 </html>
+
 
 
 
