--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
     .contact dd, .contact dt { margin: 0; }
     .contact dt { color: var(--ink-2); font-size: 12px; text-transform: uppercase; letter-spacing: .08em; margin-top: 18px; }
     footer { border-top: 1px solid var(--rule); margin-top: 64px; padding-top: 16px; color: var(--ink-2); font-size: 14px; }
-/*     .profile-pic-top {
+    .profile-pic-top {
       max-width: 33%;        /* about 1/3 of content width */
       height: auto;
       border-radius: 50%;    /* keep it circular */
       margin: 0 24px 24px 0; /* spacing to the right and bottom */
       float: left;           /* aligns to left and lets text wrap */
-    } */
+    }
     @media (max-width: 1100px) {
       .wrap { grid-template-columns: 1fr; }
       .rail { position: static; height: auto; border-right: none; border-bottom: 1px solid var(--rule); padding: 28px 24px; }
@@ -395,15 +395,4 @@
   </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
 
