--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     </aside>
     <div></div>
     <main class="main">
-      <h1>Machine Learning and more</h1>
+      <h1>Machine Learning and More</h1>
       <section id="about" class="intro">
         <h2>About Me</h2>
         <img src="images/Taha.png" alt="Taha ValizadehAslani" style="max-width:40%; height:auto; margin:8px 0; border-radius: 50%;">
