--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
       <section id="contact">
         <h2>Contact</h2>
         <dl class="contact">
-          <dt>Email</dt>
+          <!-- <dt>Email</dt> -->
           <dd><a href="mailto:taha.valizadeh@gmail.com">taha.valizadeh@gmail.com</a></dd>
         </dl>
         <footer>
