--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     max-width: 68ch;  /* same as paragraph text width */
     width: 100%;
     height: auto;
-    border-radius: 50%;    /* keep it circular */
+    /* border-radius: 50%; */
     margin: 12px auto;
     }
     .contact dd, .contact dt { margin: 0; }
