--- a/index.html
+++ b/index.html
@@ -180,6 +180,10 @@
             <strong>Comcast</strong> — Software Engineer<br>
             <span class="muted">Philadelphia, PA • Sept 2023 – Present</span>
           </li>
+          <li>
+            <strong>Drexel University</strong> — Graduate Research and Teaching Assistant<br>
+            <span class="muted">Philadelphia, PA • Sept 2018 – Sept 2023</span>
+          </li>
         </ul>
       </section>      
 
