--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             <span class="muted">Tehran, Iran • Sept 2014 – Jan 2017</span>
           </li>
           <li>
-            <strong>Lorestan University</strong> — B.Sc. in Electrical Engineering (Power)<br>
+            <strong>Lorestan University</strong> — B.Sc. in Electrical Engineering<br>
             <span class="muted">Khorramabad, Iran • Feb 2009 – May 2013</span>
           </li>
         </ul>
