--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
             <li><strong>Dopamine Nation</strong> by Anna Lembke<br></li>
             <li><strong>Social Justice Fallacies</strong> by Thomas Sowell<br></li>
             <li><strong>Introducing Feminism: A Graphic Guide</strong> by Cathia Jenainati and Judy Groves<br></li>
-            <li><strong>Introducing Slavoj Zizek: A Graphic Guide</strong> by Christopher Kul-Want and Piero Pierini<br></li>
+            <li><strong>Introducing Slavoj Žižek: A Graphic Guide</strong> by Christopher Kul-Want and Piero Pierini<br></li>
             <li><strong>The ADHD Explosion</strong> by Richard Scheffler and Stephen P. Hinshaw<br></li>
          </ul>
 
