--- a/index.html
+++ b/index.html
@@ -363,6 +363,7 @@
             <li><strong>Economic & Philosophic Manuscripts of 1844</strong> by Karl Marx<br></li>
             <li><strong>The Signal and the Noise</strong> by Nate Silver</li>
             <li><strong>The Climate Casino</strong> by William Nordhaus</li>
+            <li><strong>Bullshit Jobs</strong> by David Graeber</li>
          </ul>   
         
         <h3>Physics</h3>
