--- a/index.html
+++ b/index.html
@@ -126,10 +126,12 @@
 
           <article class="project">
             <h3>
-              <a href="https://academic.oup.com/bib/article/24/4/bbad226/7197744" target="_blank" rel="noreferrer noopener">
-                PharmBERT: An LLM for pharmaceutical texts
-              </a>
+              PharmBERT: An LLM for pharmaceutical texts
             </h3>
+            <a href="https://academic.oup.com/bib/article/24/4/bbad226/7197744" target="_blank" rel="noreferrer noopener">📄 Paper</a> | 
+            <a href="https://github.com/TahaAslani/PharmBERT" target="_blank" rel="noreferrer noopener">💻 Code</a> |
+            <a href="https://huggingface.co/Lianglab/PharmBERT-cased/tree/main" target="_blank" rel="noreferrer noopener">📦 Model (cased)</a> |
+            <a href="https://huggingface.co/Lianglab/PharmBERT-uncased/tree/main" target="_blank" rel="noreferrer noopener">📦 Model (uncased)</a>
             <p class="muted">Drug labels aren’t like ordinary text. They’re packed with highly specialized language, strict regulatory phrasing, and complex medical terminology. This makes them challenging for generic large language models (LLMs), which lack the domain knowledge needed to interpret pharmaceutical text with accuracy and reliability.<br>That’s where PharmBERT comes in. Built specifically for the U.S. Food and Drug Administration (FDA), PharmBERT is a first-of-its-kind, purpose-built model designed to understand the unique world of drug labels. Unlike general-purpose LLMs, PharmBERT has been trained on a vast range of pharmaceutical texts, giving it the expertise to decode complex compound names, regulatory language, and medical terminology with unmatched precision.</p>
             <img src="images/PharmBERT.png" alt="PharmBERT concept art illustrating domain-specific pretraining for drug labels" style="max-width:60%; height:auto; margin:8px 0;">
             <p class="muted">PharmBERT bridges the gap between powerful language processing and the strict demands of the pharmaceutical industry. The result: more accurate insights, greater reliability, and contextually relevant analysis that general models simply can’t match.<br>With PharmBERT, pharmaceutical companies, healthcare professionals, and regulators gain a specialized tool that transforms drug-label text into actionable knowledge—delivering clarity, confidence, and compliance at every step.</p>
@@ -137,10 +139,9 @@
 
           <article class="project">
               <h3>
-                <a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC7694136/" target="_blank" rel="noreferrer noopener">
-                  Amino Acid k-mer Features for Antimicrobial Resistance Prediction
-                </a>
+              Amino Acid k-mer Features for Antimicrobial Resistance Prediction
               </h3>
+            <a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC7694136/" target="_blank" rel="noreferrer noopener">📄 Paper</a> 
             <p class="muted">Microbes can adapt over time, developing resistance to antibiotics—a phenomenon known as antimicrobial resistance (AMR). Once this resistance emerges, treating infections becomes much more difficult, often requiring stronger or alternative antibiotics, many of which may carry greater risks. Misuse and overuse of antibiotics have accelerated this process, putting constant evolutionary pressure on microbes and driving the rise of AMR. Today, this issue is widely regarded as one of the most serious public-health threats, with the potential to trigger crises comparable to pandemics if effective treatments are unavailable.</p>
             <p class="muted">The aim of this project was to design and test machine learning approaches that leverage bacterial genome sequences in two ways: first, to estimate the minimum antibiotic dosage needed to combat an infection; and second, to pinpoint mutations or genes that contribute to resistance. I introduced a new feature-extraction method—counting amino-acid k-mers—that enables machine-learning models to recognize recurring patterns in amino acid sequences within bacterial genes. I compared the proposed method to the existing methods, such as counting nucleotide (NT) k-mers, gene searching, and single-nucleotide polymorphism (SNP) calling.</p>
             <img src="images/AMR.png" alt="Visualization of implemented methods for analyzing bacterial genomes" style="max-width:60%; height:auto; margin:8px 0;">
@@ -149,10 +150,10 @@
           
           <article class="project">
             <h3>
-              <a href="https://www.sciencedirect.com/science/article/pii/S0925231224005721" target="_blank" rel="noreferrer noopener">
-                Two-stage fine-tuning for learning class-imbalanced data
-              </a>
+            Two-stage fine-tuning for learning class-imbalanced data
             </h3>  
+            <a href="https://www.sciencedirect.com/science/article/pii/S0925231224005721" target="_blank" rel="noreferrer noopener">📄 Paper</a> | 
+            <a href="https://github.com/TahaAslani/two-stage-fine-tuning" target="_blank" rel="noreferrer noopener">💻 Code</a> 
             <p class="muted">In practical classification scenarios, it's common to encounter an imbalanced or long-tailed distribution of classes. This situation arises when certain classes within the dataset, known as minority classes, are represented by a relatively small number of samples, while others, referred to as majority classes, are characterized by a significantly larger number of samples. This non-uniform distribution of samples among classes presents a challenge to a wide array of machine learning algorithms. This issue is further exacerbated if the selected performance metric values all classes equally, irrespective of their frequency in the dataset, for reasons such as fairness and inclusivity or because of an intrinsic interest in the minority class.</p>
             <p class="muted">To cope with these challenges, a simple modification of standard fine-tuning is employed: Two-stage fine-tuning. In Stage 1, the final layer of the pretrained model is pre-finetuned. The pre-finetuning can be done either by training the last layer with class-balanced augmented data, generated using ChatGPT, or with a class-balanced reweighting method used with the original data. In Stage 2, the standard fine-tuning is performed.</p>
             <img src="images/two-stage.jpg" alt="Two-stage fine-tuning" style="max-width:60%; height:auto; margin:8px 0;">
@@ -168,10 +169,9 @@
 
           <article class="project">
             <h3>
-              <a href="https://www.sciencedirect.com/science/article/pii/S1874490718302350" target="_blank" rel="noreferrer noopener">
-                Mathematical analysis and improvement of IS-LDPC codes
-              </a>
-            </h3>  
+              Mathematical analysis and improvement of IS-LDPC codes
+            </h3>
+            <a href="https://www.sciencedirect.com/science/article/abs/pii/S1874490718302350" target="_blank" rel="noreferrer noopener">📄 Paper</a>  
             <p class="muted">Peak-to-Average Power Ratio (PAPR) is a major shortcoming of Orthogonal Frequency Division Multiplexing (OFDM) systems. One promising solution to this issue is the use of Invertible-Subset Low-Density Parity-Check (IS-LDPC) codes. Although IS-LDPC codes are particularly effective at controlling PAPR with low search complexity, their error-control performance degrades as the number of invertible subsets increases.</p>
             <p class="muted">To investigate the reasons for this performance degradation, I conducted a mathematical analysis of the code construction and proved four theorems that determine the probability of key events in the construction of such codes, while also establishing bounds on the decisions that influence their performance. Based on these theorems, I proposed a heuristic search method designed to enhance the error-control performance of IS-LDPC codes, while maintaining their favorable PAPR control characteristics and low search complexity. Computer simulations show that the proposed method decreases the bit error rate (BER) and frame error rate (FER) across different configurations of IS-LDPC codes.</p>
             <img src="images/IS-LDPC.png" alt="Mathematical analysis of construction of IS-LDPC codes" style="max-width:60%; height:auto; margin:8px 0;">
@@ -179,10 +179,9 @@
 
           <article class="project">
             <h3>
-              <a href="https://arxiv.org/abs/2403.20284" target="_blank" rel="noreferrer noopener">
-                LayerNorm: A key component in parameter-efficient fine-tuning
-              </a>
-            </h3>  
+              LayerNorm: A key component in parameter-efficient fine-tuning
+            </h3>
+            <a href="https://arxiv.org/abs/2403.20284" target="_blank" rel="noreferrer noopener">📄 Paper</a>    
             <p class="muted">Transformer-based models achieve strong performance across many NLP tasks. However, due to their large number of parameters, these models are computationally expensive to fine-tune for downstream tasks. This cost grows as the number of tasks increases. Furthermore, the combination of many parameters and limited labeled data for a given task can lead to overfitting and poor generalization on out-of-distribution data. A popular approach to mitigate this issue is to fine-tune only a small subset of the model parameters rather than performing full fine-tuning.</p>
             <p class="muted">To find a computationally efficient find tuning method, I first examine how different components of BERT change during full fine-tuning and identify LayerNorm as a key component. I show that LayerNorm has the highest Fisher information among all components of BERT. This is consistent with findings from other studies, which show that—unlike other components—the performance of BERT-family models degrades significantly when LayerNorm is disabled. This further underscores the critical role of this component.  Based on these observations, I perform parameter-efficient fine-tuning by training only the LayerNorm component. My results demonstrate that fine-tuning only LayerNorm achieves comparable performance to another state-of-the-art parameter-efficient tuning (bias-only tuning), while requiring just one-fifth the number of parameters. Moreover, I show that strong performance can still be obtained when only a portion of LayerNorm is trained. Importantly, this portion can be selected based on information from the target downstream task or even from other tasks, without sacrificing performance. Achieving strong results with subsets of LayerNorm chosen from unrelated tasks highlights that these subsets can be optimized in a problem-agnostic manner.</p>
             <img src="images/LayerNorm.png" alt="LayerNorm: A key component in parameter-efficient fine-tuning" style="max-width:30%; height:auto; margin:8px 0;">
