--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
               PharmBERT: An LLM for pharmaceutical texts
             </h3>
             <a href="https://academic.oup.com/bib/article/24/4/bbad226/7197744" target="_blank" rel="noreferrer noopener">📄 Paper</a> | 
+            <a href="https://raw.githubusercontent.com/TahaAslani/PharmBERT/main/poster/PharmBERT.pdf" target="_blank" rel="noreferrer noopener">🖼 Poster</a> |
             <a href="https://github.com/TahaAslani/PharmBERT" target="_blank" rel="noreferrer noopener">💻 Code</a> |
             <a href="https://huggingface.co/Lianglab/PharmBERT-cased/tree/main" target="_blank" rel="noreferrer noopener">📦 Model (cased)</a> |
             <a href="https://huggingface.co/Lianglab/PharmBERT-uncased/tree/main" target="_blank" rel="noreferrer noopener">📦 Model (uncased)</a>
@@ -417,5 +418,6 @@
   </script>
 </body>
 </html>
+
 
 
