--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
             </h3>
             <a href="https://academic.oup.com/bib/article/24/4/bbad226/7197744" target="_blank" rel="noreferrer noopener">📄 Paper</a> | 
             <a href="https://raw.githubusercontent.com/TahaAslani/PharmBERT/main/poster/PharmBERT.pdf" target="_blank" rel="noreferrer noopener">🖼 Poster</a> |
+            <a href="https://raw.githubusercontent.com/TahaAslani/PharmBERT/main/presentation/PharmBERT_presentation.pptx" target="_blank" rel="noreferrer noopener">🖥 Presentation</a> |
             <a href="https://github.com/TahaAslani/PharmBERT" target="_blank" rel="noreferrer noopener">💻 Code</a> |
             <a href="https://huggingface.co/Lianglab/PharmBERT-cased/tree/main" target="_blank" rel="noreferrer noopener">📦 Model (cased)</a> |
             <a href="https://huggingface.co/Lianglab/PharmBERT-uncased/tree/main" target="_blank" rel="noreferrer noopener">📦 Model (uncased)</a>
@@ -155,6 +156,7 @@
             Two-stage fine-tuning for learning class-imbalanced data
             </h3>  
             <a href="https://www.sciencedirect.com/science/article/pii/S0925231224005721" target="_blank" rel="noreferrer noopener">📄 Paper</a> | 
+            <a href="https://raw.githubusercontent.com/TahaAslani/two-stage-fine-tuning/main/Two-stage finetuning presentation.pptx" target="_blank" rel="noreferrer noopener">🖥 Presentation</a> |  
             <a href="https://github.com/TahaAslani/two-stage-fine-tuning" target="_blank" rel="noreferrer noopener">💻 Code</a> 
             <p class="muted">In practical classification scenarios, it's common to encounter an imbalanced or long-tailed distribution of classes. This situation arises when certain classes within the dataset, known as minority classes, are represented by a relatively small number of samples, while others, referred to as majority classes, are characterized by a significantly larger number of samples. This non-uniform distribution of samples among classes presents a challenge to a wide array of machine learning algorithms. This issue is further exacerbated if the selected performance metric values all classes equally, irrespective of their frequency in the dataset, for reasons such as fairness and inclusivity or because of an intrinsic interest in the minority class.</p>
             <p class="muted">To cope with these challenges, a simple modification of standard fine-tuning is employed: Two-stage fine-tuning. In Stage 1, the final layer of the pretrained model is pre-finetuned. The pre-finetuning can be done either by training the last layer with class-balanced augmented data, generated using ChatGPT, or with a class-balanced reweighting method used with the original data. In Stage 2, the standard fine-tuning is performed.</p>
@@ -419,6 +421,7 @@
   </script>
 </body>
 </html>
+
 
 
 
