--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
               LayerNorm: A key component in parameter-efficient fine-tuning
             </h3>
             <a href="https://arxiv.org/abs/2403.20284" target="_blank" rel="noreferrer noopener">📄 Paper</a>    
+            <a href="https://raw.githubusercontent.com/TahaAslani/tahaaslani.github.io/main/files/LayerNorm presentation.pptx" target="_blank" rel="noreferrer noopener">🖥 Presentation</a> |
             <p class="muted">Transformer-based models achieve strong performance across many NLP tasks. However, due to their large number of parameters, these models are computationally expensive to fine-tune for downstream tasks. This cost grows as the number of tasks increases. Furthermore, the combination of many parameters and limited labeled data for a given task can lead to overfitting and poor generalization on out-of-distribution data. A popular approach to mitigate this issue is to fine-tune only a small subset of the model parameters rather than performing full fine-tuning.</p>
             <p class="muted">To find a computationally efficient find tuning method, I first examine how different components of BERT change during full fine-tuning and identify LayerNorm as a key component. I show that LayerNorm has the highest Fisher information among all components of BERT. This is consistent with findings from other studies, which show that—unlike other components—the performance of BERT-family models degrades significantly when LayerNorm is disabled. This further underscores the critical role of this component.  Based on these observations, I perform parameter-efficient fine-tuning by training only the LayerNorm component. My results demonstrate that fine-tuning only LayerNorm achieves comparable performance to another state-of-the-art parameter-efficient tuning (bias-only tuning), while requiring just one-fifth the number of parameters. Moreover, I show that strong performance can still be obtained when only a portion of LayerNorm is trained. Importantly, this portion can be selected based on information from the target downstream task or even from other tasks, without sacrificing performance. Achieving strong results with subsets of LayerNorm chosen from unrelated tasks highlights that these subsets can be optimized in a problem-agnostic manner.</p>
             <img src="images/LayerNorm.png" alt="LayerNorm: A key component in parameter-efficient fine-tuning" style="max-width:30%; height:auto; margin:8px 0;">
@@ -421,6 +422,7 @@
   </script>
 </body>
 </html>
+
 
 
 
