--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <a href="#Publications">Publications</a>
         <a href="#books">Book Recommendations</a>
         <a href="#contact">Contact</a>
-        <a href="https://raw.githubusercontent.com/TahaAslani/tahaaslani.github.io/main/Resume_TV.pdf">Résumé</a>
+        <a href="https://raw.githubusercontent.com/TahaAslani/tahaaslani.github.io/main/files/Resume_TV.pdf">Résumé</a>
       </nav>
     </aside>
     <div></div>
@@ -104,7 +104,7 @@
         <p class="muted">I work on <strong>machine learning</strong>, <strong>natural language processing</strong>, <strong>data science</strong>,  and <strong>information theory</strong>. I care about models that not only get the job done but are also theoretically proven to be optimal.<br>
           Personally, I am interested in learning about psychology, social sciences, and history.</p>
         <div class="meta" style="margin-top:8px">
-          <span><a href="https://raw.githubusercontent.com/TahaAslani/tahaaslani.github.io/main/Resume_TV.pdf">Résumé</a></span>
+          <span><a href="https://raw.githubusercontent.com/TahaAslani/tahaaslani.github.io/main/files/Resume_TV.pdf">Résumé</a></span>
           <span>•</span>
           <span><a href="mailto:taha.valizadeh@gmail.com">Email</a></span>
           <span>•</span>
@@ -422,6 +422,7 @@
   </script>
 </body>
 </html>
+
 
 
 
