--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Taha ValizadehAslani</title>
-  <meta name="description" content="Personal site for Taha ValizadehAslani" />
+  <meta name="description" content="Taha ValizadehAslani, Ph.D. — Machine Learning Engineer. Research in NLP, optimization, forecasting, and data engineering.">
   <meta name="color-scheme" content="light dark" />
   <link rel="icon" href="/favicon.ico" />
   <style>
@@ -422,6 +422,7 @@
   </script>
 </body>
 </html>
+
 
 
 
