--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>Taha ValizadehAslani</title>
   <meta name="description" content="Taha ValizadehAslani, Ph.D. — Machine Learning Engineer. Research in NLP, optimization, forecasting, and data engineering.">
   <meta name="color-scheme" content="light dark" />
-  <link rel="icon" href="/favicon.ico" />
+<!--   <link rel="icon" href="/favicon.ico" /> -->
+  <link rel="icon" href="favicon.png" type="image/png">
   <style>
     :root {
       --bg: #ffffff;
@@ -422,6 +423,7 @@
   </script>
 </body>
 </html>
+
 
 
 
