--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Taha ValizadehAslani, Ph.D. — Machine Learning Engineer. Research in NLP, optimization, forecasting, and data engineering.">
   <meta name="color-scheme" content="light dark" />
 <!--   <link rel="icon" href="/favicon.ico" /> -->
-  <link rel="icon" href="favicon.png" type="image/png">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
   <style>
     :root {
       --bg: #ffffff;
@@ -423,6 +423,7 @@
   </script>
 </body>
 </html>
+
 
 
 
