--- a/index.html
+++ b/index.html
@@ -237,6 +237,13 @@
 
       <section id="Publications">
         <h2>Publications</h2>
+
+        <h3>Dissertation</h3>
+          <li>
+            <a href="https://researchdiscovery.drexel.edu/esploro/outputs/doctoral/Using-Large-Language-Models-for-Analyzing/991021866712004721">
+              “Using Large Language Models for Analyzing Drug Label Data”
+            </a>
+          </li> 
       
         <h3>Journal and Conference Papers</h3>
         <ul class="pub-list">
@@ -423,6 +430,7 @@
   </script>
 </body>
 </html>
+
 
 
 
