--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@
         <h2>Publications</h2>
 
         <h3>Dissertation</h3>
+        <ul class="dissertation">
           <li>
             <a href="https://researchdiscovery.drexel.edu/esploro/outputs/doctoral/Using-Large-Language-Models-for-Analyzing/991021866712004721">
               “Using Large Language Models for Analyzing Drug Label Data”
@@ -430,6 +431,7 @@
   </script>
 </body>
 </html>
+
 
 
 
