--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
         <ul class="dissertation">
           <li>
             <a href="https://researchdiscovery.drexel.edu/esploro/outputs/doctoral/Using-Large-Language-Models-for-Analyzing/991021866712004721">
-              “Using Large Language Models for Analyzing Drug Label Data”
+              <strong>Taha ValizadehAslani</strong>. “Using Large Language Models for Analyzing Drug Label Data”. Drexel University. 2024.
             </a>
           </li> 
         </ul>
@@ -432,6 +432,7 @@
   </script>
 </body>
 </html>
+
 
 
 
