--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <link rel="canonical" href="https://tahaaslani.com/">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Taha ValizadehAslani</title>
   <meta name="description" content="Taha ValizadehAslani, Ph.D. — Machine Learning Engineer. Research in NLP, optimization, forecasting, and data engineering.">
   <meta name="color-scheme" content="light dark" />
-<!--   <link rel="icon" href="/favicon.ico" /> -->
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <style>
     :root {
@@ -432,6 +432,7 @@
   </script>
 </body>
 </html>
+
 
 
 
