--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         <ul class="edu-list">
           <li>
 <!--             <strong>Drexel University</strong> — Ph.D. in Electrical Engineering<br> -->
-            <strong>Drexel University</strong> — Ph.D. in Electrical Engineering(<a href="https://researchdiscovery.drexel.edu/esploro/outputs/doctoral/Using-Large-Language-Models-for-Analyzing/991021866712004721">Dissertation</a>)<br>
+            <strong>Drexel University</strong> — Ph.D. in Electrical Engineering (<a href="https://researchdiscovery.drexel.edu/esploro/outputs/doctoral/Using-Large-Language-Models-for-Analyzing/991021866712004721">dissertation</a>)<br>
             <span class="muted">Philadelphia, PA • Sept 2018 – Mar 2024</span>
           </li>
           <li>
@@ -433,6 +433,7 @@
   </script>
 </body>
 </html>
+
 
 
 
