--- a/index.html
+++ b/index.html
@@ -349,8 +349,8 @@
             <li><em>Is There Anything Good About Men?</em> by Roy F. Baumeister<br></li>
             <li><em>Dopamine Nation</em> by Anna Lembke<br></li>
             <li><em>Social Justice Fallacies</em> by Thomas Sowell<br></li>
-            <li><em>Introducing Feminism: A Graphic Guide</em> by Cathia Jenainati and Judy Groves<br></li>
-            <li><em>Introducing Slavoj Žižek: A Graphic Guide</em> by Christopher Kul-Want and Piero Pierini<br></li>
+            <li><em>Introducing Feminism</em> by Cathia Jenainati and Judy Groves<br></li>
+            <li><em>Introducing Slavoj Žižek</em> by Christopher Kul-Want and Piero Pierini<br></li>
             <li><em>The War on Science</em> by Lawrence M. Krauss<br></li>
             <li><em>The ADHD Explosion</em> by Richard Scheffler and Stephen P. Hinshaw<br></li>
          </ul>
@@ -434,6 +434,7 @@
   </script>
 </body>
 </html>
+
 
 
 
