--- a/index.html
+++ b/index.html
@@ -346,6 +346,7 @@
           <ul class="book-list">  
             <li><em>The Righteous Mind</em> by Jonathan Haidt</li>
             <li><em>The Coddling of the American Mind</em> by Greg Lukianoff and Jonathan Haidt<br></li>
+            <li><em>Why We're Polarized</em> by Ezra Klein<br></li>
             <li><em>Is There Anything Good About Men?</em> by Roy F. Baumeister<br></li>
             <li><em>Dopamine Nation</em> by Anna Lembke<br></li>
             <li><em>Social Justice Fallacies</em> by Thomas Sowell<br></li>
@@ -434,6 +435,7 @@
   </script>
 </body>
 </html>
+
 
 
 
